fixed the header. made the square with my name in it like in the mock website using padding on the header, instead of .box... used fit-content on .box so it would be as big as my name. Used flexbox to item align my name with nav links. Than used space-between to put my name far left, and nav links far right.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,39 +6,61 @@
     --gold: #FA5;
 }
 
-ul {
-    list-style-type: none;
-    height: 50px;
-    /* margin: 0; */
-    padding: 0;
-    overflow: hidden;
-    background-color: var(--darkgray);
-
-}
-
 header {
-    background-color
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--darkgray);
+    height: 100%;
+    padding: 20px 0;
 }
 
-.header {
-    color: var(--darkgray);
+.box {
     background-color: var(--lightblue);
-    ;
-}
-
-li {
-    float: right;
-    margin: 0 10px;
-    color: var(--gold);
+    width: fit-content
 }
 
 .name {
-    flex: row
+    padding-left: 40px;
+    font-size: 50px;
+    color: var(--darkgray);
 }
 
-.buttons {
-    font-family
+/* .header {
+    color: var(--darkgray);
+    background-color: var(--lightblue);
+    width: 100%;
+    height: 50px;
+} */
+
+ol {
+    display: flex;
+
+    /* flex-direction: row-reverse; */
+    /* background-color: var(--darkgray); */
+
 }
+
+/* li {
+    float: right;
+    margin: 0 10px;
+    color: var(--gold);
+} */
+
+.nav-link {
+    float: right;
+    text-decoration: none;
+    font-size: 25px;
+    color: var(--gold);
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    padding-right: 15px;
+    display: inline-block;
+}
+
+/* .buttons {
+    font-family
+} */
 
 
 .article {
